# primeval

./: .gitignore  LICENSE  README.md  docker-compose.yml  imghdr.py  pyproject.toml
.github/workflows/: ci.yml
cado-src/: Dockerfile  entrypoint.sh
data/: metadata.json  modulus.txt
primeval/: __init__.py  cli.py  import_factors.py  modulus.py  parse.py  publickey.asc  reconstruct.py  solve.py
tests/: test_cli.py  test_parse.py  test_pipeline_e2e.py  test_reconstruct.py  test_reconstruction.py  test_solve.py
