[project]
name = "primeval"
version = "0.1.0"
description = "Primeval: automated RSA/OpenPGP private-key reconstruction from factors"
authors = [ { name = "Primeval" } ]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pgpy>=0.6.0",
    "cryptography>=3.4",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["primeval*"]

[project.scripts]
primeval = "primeval.reconstruct:main"
